css/main.css
body {
    margin: 60px auto;
    width: 70%;
}
nav ul, footer ul {
    font-family:'Helvetica', 'Arial', 'Sans-Serif';
    padding: 0px;
    list-style: none;
    font-weight: bold;
}
nav ul li, footer ul li {
    display: inline;
    margin-right: 20px;
}
a {
    text-decoration: none;
    color: #999;
}
a:hover {
    text-decoration: underline;
}
h1 {
    font-size: 3em;
    font-family:'Helvetica', 'Arial', 'Sans-Serif';
}
p {
    font-size: 1.5em;
    line-height: 1.4em;
    color: #333;
}
footer {
    border-top: 1px solid #d5d5d5;
}

nav {
    border-bottom: 1px solid #d5d5d5;
}
.fa, .fab {
    text-align: center;
    min-width: 1em;
}

li .fa, li .fab {
    margin-right: 0.3em;
}

ul.posts { 
    margin: 20px auto 40px; 
    font-size: 1.5em;
}

ul.posts li {
    list-style: none;
}

ol.a {
    list-style-type: lower-alpha;
}

.grid {
  display: flex;
 }

.col-md-12 {
 flex: 1;
 float: left;
 width: 50%;
 padding: 10px;
}

img[src*='#left'] {
    float: left;
}
img[src*='#right'] {
    float: right;
}
img[src*='#center'] {
    display: block;
    margin: auto;
}

img[alt=Picture description] { width: 200px; }

.center-image
{
    margin: 0 0 0 0;
    display: block;
}

.image-size
{
    width: 300px;
}

.research-image-size
{
    width: 500px;
}

/* Clear floats after the columns */
.row:after {
  content: "";
  display: table;
  clear: both;
}

[class*="col-"] {
  float: left;
  padding: 15px;
}

[class*="col-"] {
  width: 100%;
}


/* For desktop: */
/*
.col-1 {width: 45%;}
.col-2 {width: 45%;}
*/

/* Responsive layout - when the screen is less than 600px wide, make the three columns stack on top of each other instead of next to each other */
/*
@media only screen and (max-width: 768px) {
  [class*="col-"] {
    width: 100%;
  }

}
*/

@media only screen and (min-width: 600px) {
  /* For tablets: */
  .col-s-1 {width: 100%;}
  .col-s-2 {width: 100%;}
}

@media only screen and (min-width: 768px) {
  /* For desktop: */
  .col-1 {width: 45%;}
  .col-2 {width: 45%;}
}

